--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Переменные окружения
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Railway specific (but keep .env.railway for template)
+# .env.railway
 
 # Зависимости
 node_modules/
@@ -23,3 +30,6 @@ logs/
 # OS
 .DS_Store
 Thumbs.db
+
+# Railway
+.railway/
