--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
   ],
   "routes": [
     {
+      "src": "/test",
+      "dest": "/test.html"
+    },
+    {
       "handle": "filesystem"
     },
     {
