--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "rimraf dist && vite build",
     "preview": "vite preview",
     "start": "node server.js",
     "dev:full": "npm run build && npm start",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^2.1.0",
+    "rimraf": "^6.0.1",
     "vite": "^7.1.7",
     "vite-plugin-solid": "^2.8.0"
   }
